--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Julio Espinoza # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "images/photo_self.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data, Data, Data
   <br><br>
