--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "images/photo_self.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data, Data, Data
   <br><br>
- Hiking. Personal Finance. Foodie.
+  Sports. Dog dad. Teching analytics. 
   <br><br>
   <a href="https://www.linkedin.com/in/jbespinoza/">View My LinkedIn Profile</a> 
   
