--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "images/photo_self.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data, Data, Data
   <br><br>
-  Hiking. Personal Finance. Foodie. 
+  When I'm not looking at data, you can find me hiking, learning more about personal finance, or finding a great food spot.
   <br><br>
   <a href="https://www.linkedin.com/in/jbespinoza/">View My LinkedIn Profile</a> 
   
